# ai-dev-pipeline

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.ai-rules/: project.claude.md  project.copilot.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
PMO/: plan-v2.md  plan.md
configs/: config.example.yaml
contracts/: CONTRACT-001-llm-provider.yaml  CONTRACT-002-dispatcher.yaml  CONTRACT-003-reviewer.yaml
docs/: 00-navigator.md
docs/01-requirements/: REQ-001-系统需求规格说明书.md
docs/02-system-design/: SYS-001-系统设计说明书.md
docs/03-architecture/: ARCH-001-架构总览.md  ARCH-002-部署架构.md
docs/04-outline-design/: OD-001-模块概要设计.md  OD-002-数据模型设计.md  OD-003-接口契约设计.md  OD-MOD-001-doc_analyzer.md  OD-MOD-002-doc_parser.md  OD-MOD-003-machine_registry.md  OD-MOD-004-task_engine.md  OD-MOD-005-task_models.md  OD-MOD-006-dispatcher.md  OD-MOD-007-reviewer.md  OD-MOD-008-test_runner.md  OD-MOD-009-state_machine.md  OD-MOD-010-reporter.md  OD-MOD-011-git_ops.md  OD-MOD-012-config.md  OD-MOD-013-main.md  OD-SYS-001-系统概要设计.md
docs/05-detail-design/: DD-001-详细设计说明书.md  DD-MOD-001-doc_analyzer.md  DD-MOD-002-doc_parser.md  DD-MOD-003-machine_registry.md  DD-MOD-004-task_engine.md  DD-MOD-005-task_models.md  DD-MOD-006-state_machine.md  (+8 more)
orchestrator/: __init__.py  config.py  config.yaml  dashboard.py  dispatcher.py  doc_analyzer.py  doc_parser.py  git_ops.py  log_config.py  machine_registry.py  main.py  reporter.py  reviewer.py  state_machine.py  task_engine.py  task_models.py  test_runner.py
release/: RELEASE_NOTES-v3.0.0.md
reports/: TEST-REPORT-v3.0.0.md
tests/: conftest.py  test_acceptance.py  test_config.py  test_coverage_boost.py  test_dashboard.py  test_dispatcher.py  test_doc_analyzer.py  test_doc_parser.py  test_docs_examples.py  test_git_ops.py  test_integration.py  test_log_config.py  test_machine_registry.py  test_main.py  test_reporter.py  test_reviewer.py  test_smoke.py  test_state_machine.py  test_task_engine.py  test_task_models.py  test_test_runner.py
(+87 files in other folders)
